changed and added CEO on pages

--- a/about-page.html
+++ b/about-page.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Portfolio of Viktoriia SKakovska - font-end developer from Ukraine, based
-      in Europe
+      Read about Viktoriia SKakovska - font-end developer from Ukraine, based in
+      Europe
     </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -79,7 +79,7 @@
               <a
                 class="nav-link active"
                 href="about-page.html"
-                title="About Viktoriia Skakovska"
+                title="About Viktoriia"
                 >About</a
               >
             </li>
@@ -126,36 +126,12 @@
         <div class="col-lg-6 text-right">
           <img
             src="images/me.jpg"
-            alt="photo Viktoria"
+            alt="photo of Viktoria"
             class="img-fluid img-about-page"
           />
         </div>
       </div>
     </div>
-    <!--
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <img
-            src="images/yoga.png"
-            class="img-fluid img-on-contact-page p-3 shadow rounded"
-          />
-        </div>
-        <div class="col-sm-4">
-          <img
-            src="images/weather.png"
-            class="img-fluid img-on-contact-page p-3 shadow rounded"
-          />
-        </div>
-        <div class="col-sm-4">
-          <img
-            src="images/yogurt.png"
-            class="img-fluid img-on-contact-page p-3 shadow rounded"
-          />
-        </div>
-      </div>
-    </div>
-    -->
     <footer class="mb-5">
       <div class="contact-box container justify-content-between mb-5 d-md-flex">
         <div>
@@ -179,7 +155,7 @@
         <a
           href="mailto:viktoriia.skakovska@gmail.com"
           class="contact-link"
-          title="Contact Viktoriia Skakovska"
+          title="Contact Viktoriia by email"
           >viktoriia.skakovska@gmail.com</a
         >
       </div>
@@ -187,19 +163,16 @@
         <a href="#" class="" target="_blank"
           ><img
             src="images/linkedin1.png"
-            alt="My page - linkedIn"
+            alt="LinkedIn-page Viktoria"
             class="footer-img"
         /></a>
         <a href="#" class="" target="_blank"
-          ><img
-            src="images/email1.png"
-            alt="Contact me - email"
-            class="footer-img"
+          ><img src="images/email1.png" alt="Email Viktoria" class="footer-img"
         /></a>
         <a href="#" class="" target="_blank"
           ><img
             src="images/insta.png"
-            alt="My page - istagram"
+            alt="Instagram Viktoria"
             class="footer-img"
         /></a>
       </div>
