--- a/contact-page.html
+++ b/contact-page.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Portfolio of Viktoriia SKakovska - font-end developer from Ukraine, based
-      in Europe
+      Contact Viktoriia SKakovska - font-end developer from Ukraine, based in
+      Europe
     </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -148,19 +148,16 @@
         <a href="#" class="" target="_blank"
           ><img
             src="images/linkedin1.png"
-            alt="My page - linkedIn"
+            alt="LinkedIn-page Viktoria"
             class="footer-img"
         /></a>
         <a href="#" class="" target="_blank"
-          ><img
-            src="images/email1.png"
-            alt="Contact me - email"
-            class="footer-img"
+          ><img src="images/email1.png" alt="Email Viktoria" class="footer-img"
         /></a>
         <a href="#" class="" target="_blank"
           ><img
             src="images/insta.png"
-            alt="My page - istagram"
+            alt="Instagram Viktoria"
             class="footer-img"
         /></a>
       </div>
