--- a/index.html
+++ b/index.html
@@ -107,12 +107,14 @@
         <a
           href="contact-page.html#contact"
           class="link-primary"
+          target="_blank"
           title="Contact Viktoriia Skakovska"
           >Contact me</a
         >
         <a
-          href="contact-page.html"
+          href="about-page.html"
           class="link-primary"
+          target="_blank"
           title="About Viktoriia Skakovska"
           >About me</a
         >
@@ -126,7 +128,7 @@
         <div class="col-md-6">
           <img
             src="images/yoga.png"
-            alt="yoga-project-picture"
+            alt="Yoga project preview"
             class="img-fluid rounded d-none d-sm-block"
           />
         </div>
@@ -153,13 +155,13 @@
             explicabo eum dolore.
           </p>
           <div class="app-link mt-5 mb-3">
-            <a href="#" class="link-secondary">Learn more</a>
+            <a href="#" class="link-secondary" target="_blank">Learn more</a>
           </div>
         </div>
         <div class="col-md-6 mb-3">
           <img
             src="images/weather.png"
-            alt="weather-project-picture"
+            alt="Weather project preview"
             class="img-fluid rounded d-none d-sm-block mt-3"
           />
         </div>
@@ -168,7 +170,7 @@
         <div class="col-md-6">
           <img
             src="images/yogurt.png"
-            alt="yogurt-project-picture"
+            alt="Yougurt project preview"
             class="img-fluid rounded d-none d-sm-block"
           />
         </div>
@@ -181,7 +183,7 @@
             explicabo eum dolore.
           </p>
           <div class="app-link mt-5 mb-3">
-            <a href="#" class="link-secondary" target="blank"> Learn more </a>
+            <a href="#" class="link-secondary" target="_blank"> Learn more </a>
           </div>
         </div>
       </div>
@@ -194,7 +196,7 @@
         </div>
         <div>
           <a
-            href="mailto:viktoriia.skakovska@gmail.com"
+            href="contact-page.html"
             class="btn btn-works"
             title="Contact Viktoriia Skakovska"
             >Let`s talk here</a
@@ -205,22 +207,28 @@
         <a href="#" class="" target="_blank"
           ><img
             src="images/linkedin1.png"
-            alt="My page - linkedIn"
+            alt="LinkedIn-page Viktoria"
             class="footer-img"
         /></a>
         <a href="#" class="" target="_blank"
-          ><img
-            src="images/email1.png"
-            alt="Contact me - email"
-            class="footer-img"
+          ><img src="images/email1.png" alt="Email Viktoria" class="footer-img"
         /></a>
         <a href="#" class="" target="_blank"
           ><img
             src="images/insta.png"
-            alt="My page - istagram"
+            alt="Instagram Viktoria"
             class="footer-img"
         /></a>
       </div>
+      <p class="text-center mt-4">
+        ✌🏻 This project was coded by Viktoria Skakovska and it is
+        <a
+          href="https://github.com/Viktoriia2/My-portfolio"
+          class="href"
+          target="_blank"
+          >open-sourced</a
+        >
+      </p>
     </footer>
   </body>
 </html>
