--- a/work-page.html
+++ b/work-page.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Portfolio of Viktoriia SKakovska - font-end developer from Ukraine, based
-      in Europe
+      Porjects created by Viktoriia SKakovska - font-end developer from Ukraine,
+      based in Europe
     </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -76,10 +76,7 @@
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                href="about-page.html"
-                title="About Viktoriia Skakovska"
+              <a class="nav-link" href="about-page.html" title="About Viktoriia"
                 >About</a
               >
             </li>
@@ -123,7 +120,7 @@
             <img
               src="images/weather.png"
               class="img-fluid mb-4 rounded"
-              alt="My yougurt project"
+              alt="Weather project by Viktoria"
             />
             <h3 class="work-page">Weather project</h3>
             <p>Built with HTML, CSS and JavaScript</p>
@@ -132,7 +129,7 @@
             <img
               src="images/dictionary.png"
               class="img-fluid mb-4 rounded"
-              alt="My yougurt project"
+              alt="Dictionaty project by Viktoria"
             />
             <h3 class="work-page">Dictionary App</h3>
             <p>Built with HTML, CSS with React</p>
@@ -141,7 +138,7 @@
             <img
               src="images/trans.png"
               class="img-fluid mb-4 rounded"
-              alt="My yougurt project"
+              alt="Translation project by Viktoria"
             />
             <h3 class="work-page">Translation App</h3>
             <p>Built with HTML, CSS with React</p>
@@ -154,19 +151,16 @@
         <a href="#" class="" target="_blank"
           ><img
             src="images/linkedin1.png"
-            alt="My page - linkedIn"
+            alt="LinkedIn-page Viktoria"
             class="footer-img"
         /></a>
         <a href="#" class="" target="_blank"
-          ><img
-            src="images/email1.png"
-            alt="Contact me - email"
-            class="footer-img"
+          ><img src="images/email1.png" alt="Email Viktoria" class="footer-img"
         /></a>
         <a href="#" class="" target="_blank"
           ><img
             src="images/insta.png"
-            alt="My page - istagram"
+            alt="Instagram Viktoria"
             class="footer-img"
         /></a>
       </div>
