added github link to footer

--- a/work-page.html
+++ b/work-page.html
@@ -164,6 +164,15 @@
             class="footer-img"
         /></a>
       </div>
+      <p class="text-center mt-4">
+        ✌🏻 This project was coded by Viktoria Skakovska and it is
+        <a
+          href="https://github.com/Viktoriia2/My-portfolio"
+          class="href"
+          target="_blank"
+          >open-sourced</a
+        >
+      </p>
     </footer>
   </body>
 </html>
