--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         /></a>
       </div>
       <p class="text-center mt-4">
-        ✌🏻 This project was coded by Viktoria Skakovska and it is
+        ✌🏻 This project was coded by Viktoria Skakovska, and it is
         <a
           href="https://github.com/Viktoriia2/My-portfolio"
           class="href"
