--- a/contact-page.html
+++ b/contact-page.html
@@ -129,7 +129,7 @@
         </p>
       </div>
     </div>
-    <footer class="mb-5">
+    <footer class="mb-5 mt-5">
       <div class="contact-box container justify-content-between mb-5 d-md-flex">
         <div>
           <h4>Work Inquiry</h4>
@@ -161,8 +161,8 @@
             class="footer-img"
         /></a>
       </div>
-      <p class="text-center mt-4">
-        ✌🏻 This project was coded by Viktoria Skakovska and it is
+      <p class="text-center mt-5">
+        ✌🏻 This project was coded by Viktoria Skakovska, and it is
         <a
           href="https://github.com/Viktoriia2/My-portfolio"
           class="href"
