--- a/work-page.html
+++ b/work-page.html
@@ -146,7 +146,7 @@
         </div>
       </div>
     </div>
-    <footer class="mb-5">
+    <footer class="mb-5 mt-5">
       <div class="social-links d-flex justify-content-center text-center">
         <a href="#" class="" target="_blank"
           ><img
@@ -164,8 +164,8 @@
             class="footer-img"
         /></a>
       </div>
-      <p class="text-center mt-4">
-        ✌🏻 This project was coded by Viktoria Skakovska and it is
+      <p class="text-center mt-5">
+        ✌🏻 This project was coded by Viktoria Skakovska, and it is
         <a
           href="https://github.com/Viktoriia2/My-portfolio"
           class="href"
