--- a/about-page.html
+++ b/about-page.html
@@ -116,7 +116,7 @@
               voluptatum blanditiis harum.
             </p>
             <a
-              href="contact-page.html"
+              href="work-page.html"
               class="link-works btn btn-works"
               title="See project by Viktoriia"
               >See my project</a
