--- a/index.html
+++ b/index.html
@@ -118,9 +118,7 @@
         >
       </div>
     </div>
-    <h4 class="text-center text-uppercase mb-3 d-none d-md-block">
-      Featured Project which my best projects be choice to show
-    </h4>
+    <h4 class="text-center">Check out some of my featured projects below </h4>
     <div class="container mb-5">
       <div class="row p-4">
         <div class="col-md-6">
@@ -202,23 +200,32 @@
         </div>
       </div>
       <div class="social-links d-flex justify-content-center text-center">
-        <a href="#" class="" target="_blank"
+        <a
+          href="https://www.linkedin.com/in/viktoriia-skakovska-3239b2241/"
+          class=""
+          target="_blank"
           ><img
             src="images/linkedin1.png"
             alt="LinkedIn-page Viktoria"
             class="footer-img"
         /></a>
-        <a href="#" class="" target="_blank"
+        <a
+          href="mailto:viktoriia.skakovska@gmail.com?subject=Project offer for Viktoria"
+          class=""
+          target="_blank"
           ><img src="images/email1.png" alt="Email Viktoria" class="footer-img"
         /></a>
-        <a href="#" class="" target="_blank"
+        <a
+          href="https://www.instagram.com/viktoriaflex/"
+          class=""
+          target="_blank"
           ><img
             src="images/insta.png"
             alt="Instagram Viktoria"
             class="footer-img"
         /></a>
       </div>
-      <p class="text-center mt-4">
+      <p class="footer-end text-center">
         ✌🏻 This project was coded by Viktoria Skakovska, and it is
         <a
           href="https://github.com/Viktoriia2/My-portfolio"
