--- a/about-page.html
+++ b/about-page.html
@@ -162,23 +162,32 @@
         >
       </div>
       <div class="social-links d-flex justify-content-center text-center">
-        <a href="#" class="" target="_blank"
+        <a
+          href="https://www.linkedin.com/in/viktoriia-skakovska-3239b2241/"
+          class=""
+          target="_blank"
           ><img
             src="images/linkedin1.png"
             alt="LinkedIn-page Viktoria"
             class="footer-img"
         /></a>
-        <a href="#" class="" target="_blank"
+        <a
+          href="mailto:viktoriia.skakovska@gmail.com?subject=Project offer for Viktoria"
+          class=""
+          target="_blank"
           ><img src="images/email1.png" alt="Email Viktoria" class="footer-img"
         /></a>
-        <a href="#" class="" target="_blank"
+        <a
+          href="https://www.instagram.com/viktoriaflex/"
+          class=""
+          target="_blank"
           ><img
             src="images/insta.png"
             alt="Instagram Viktoria"
             class="footer-img"
         /></a>
       </div>
-      <p class="text-center mt-5">
+      <p class="footer-end text-center">
         ✌🏻 This project was coded by Viktoria Skakovska, and it is
         <a
           href="https://github.com/Viktoriia2/My-portfolio"
