--- a/contact-page.html
+++ b/contact-page.html
@@ -119,12 +119,22 @@
         </p>
         <h3 class="work-page">LinkdIn</h3>
         <p class="contact-page">
-          <a href="#" target="_blank">Link on LinkdIN</a>
+          <a
+            href="https://www.linkedin.com/in/viktoriia-skakovska-3239b2241/"
+            target="_blank"
+            >Link on LinkdIN</a
+          >
         </p>
         <h3 class="work-page">Instagram</h3>
         <p class="contact-page">
-          <a href="mailto:viktoriia.skakovska@gmail.com" target="_blank"
-            >viktoriaflex</a
+          <a href="https://www.instagram.com/viktoriaflex/" target="_blank"
+            >ViktoriaFlex</a
+          >
+        </p>
+        <h3 class="work-page">GitHub</h3>
+        <p class="contact-page">
+          <a href="https://github.com/Viktoriia2/My-portfolio" target="_blank"
+            >github.com/Viktoriia2/My-portfolio</a
           >
         </p>
       </div>
@@ -145,23 +155,32 @@
         </div>
       </div>
       <div class="social-links d-flex justify-content-center text-center">
-        <a href="#" class="" target="_blank"
+        <a
+          href="https://www.linkedin.com/in/viktoriia-skakovska-3239b2241/"
+          class=""
+          target="_blank"
           ><img
             src="images/linkedin1.png"
             alt="LinkedIn-page Viktoria"
             class="footer-img"
         /></a>
-        <a href="#" class="" target="_blank"
+        <a
+          href="mailto:viktoriia.skakovska@gmail.com?subject=Project offer for Viktoria"
+          class=""
+          target="_blank"
           ><img src="images/email1.png" alt="Email Viktoria" class="footer-img"
         /></a>
-        <a href="#" class="" target="_blank"
+        <a
+          href="https://www.instagram.com/viktoriaflex/"
+          class=""
+          target="_blank"
           ><img
             src="images/insta.png"
             alt="Instagram Viktoria"
             class="footer-img"
         /></a>
       </div>
-      <p class="text-center mt-5">
+      <p class="footer-end text-center">
         ✌🏻 This project was coded by Viktoria Skakovska, and it is
         <a
           href="https://github.com/Viktoriia2/My-portfolio"
