added arrow, updated links

--- a/index.html
+++ b/index.html
@@ -20,12 +20,6 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -118,7 +112,17 @@
         >
       </div>
     </div>
-    <h4 class="text-center">Check out some of my featured projects below </h4>
+    <h4 class="text-center mt-4 mb-3">
+      Check out some of my featured projects below
+    </h4>
+    <div class="wrapper mb-3">
+      <div class="arrow one">
+        <img src="images/arrows.png" alt="" class="img-arrow" />
+      </div>
+      <div class="arrow two">
+        <img src="images/arrows.png" alt="" class="img-arrow" />
+      </div>
+    </div>
     <div class="container mb-5">
       <div class="row p-4">
         <div class="col-md-6">
