--- a/contact-page.html
+++ b/contact-page.html
@@ -104,7 +104,7 @@
         <h3 class="work-page">Email</h3>
         <p class="contact-page">
           <a
-            href="mailto:viktoriia.skakovska@gmail.com"
+            href="mailto:viktoriia.skakovska@gmail.com?subject=Project offer for Viktoria"
             class=""
             title="Contact Viktoriia Skakovska"
             target="_blank"
