updated pages on CSS and added info to about--page html

--- a/about-page.html
+++ b/about-page.html
@@ -39,7 +39,7 @@
     />
   </head>
   <body class="page-about">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html" title="Homepage"
           ><img src="images/logo3.png" class="img-fluid"
@@ -99,16 +99,31 @@
     </nav>
     <div class="content-container container d-flex justify-content-center">
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-sm-8">
           <div class="content">
             <h1 class="text-uppercase">About me</h1>
             <h2>Front-end developer, based in Europe</h2>
-            <p class="mt-4">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-              aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-              qui alias veniam excepturi rem dolor fugit dignissimos, sed
-              voluptatum blanditiis harum.
-            </p>
+            <div class="mt-4 about-me">
+              <div class="mb-3">
+                Hi - my name is
+                <span class="select-word">Viktoria Skakovska! </span>
+              </div>
+              <div>
+                I started studying development in the spring of 2022 and
+              </div>
+              <div class="mb-3">
+                I <span class="select-word">enjoy creating things</span> and
+                challenging myself to see how creative I can be.
+              </div>
+              I have a passion for
+              <span class="select-word"
+                >making people happy and this applies to all areas
+              </span>
+              <div>and things that I do.</div>
+              <span class="select-word">I like what I do</span>, and I have this
+              need to keep on learning
+              <div>and know more and more.👩🏻‍🎓</div>
+            </div>
             <a
               href="work-page.html"
               class="link-works btn btn-works"
@@ -117,12 +132,113 @@
             >
           </div>
         </div>
-        <div class="col-lg-6 text-right">
+        <div class="col-sm-4 text-right">
           <img
             src="images/me.jpg"
             alt="photo of Viktoria"
             class="img-fluid img-about-page"
           />
+        </div>
+        <div class="col-sm-8 text-right">
+          <div class="content mt-5">
+            <h2>
+              Technical skills, languages,
+              <div>softwares and platforms I use:</div>
+            </h2>
+            <div class="mt-4 about-skills">
+              <img
+                src="images/html.png"
+                alt="html"
+                title="HTML"
+                class="languages img-fluid"
+              />
+              <img
+                src="images/css.png"
+                alt="css"
+                title="CSS"
+                class="languages img-fluid"
+              />
+              <img
+                src="images/javascript.png"
+                alt="javascript"
+                title="JavaScript"
+                class="languages img-fluid"
+              />
+              <img
+                src="images/editor.png"
+                alt="editor"
+                title="VSCode Editor"
+                class="languages img-fluid"
+              />
+              <img
+                src="images/api.png"
+                alt="api"
+                title="API"
+                class="languages img-fluid"
+              />
+              <img
+                src="images/github.png"
+                alt="github"
+                title="Github"
+                class="languages img-fluid"
+              />
+              <img
+                src="images/bootstrap.png"
+                alt="bootstrap"
+                title="Bootstrap"
+                class="languages img-fluid"
+              />
+              <img
+                src="images/hosting.png"
+                alt="hosting"
+                title="Hosting"
+                class="languages img-fluid"
+              />
+              <img
+                src="images/flexbox.png"
+                alt="flexbox"
+                title="Flexbox"
+                class="languages img-fluid"
+              />
+              <img
+                src="images/seo.png"
+                alt="seo"
+                title="SEO"
+                class="languages img-fluid"
+              />
+              <img
+                src="images/responsive.png"
+                alt="responsive"
+                title="Responsive"
+                class="languages img-fluid"
+              />
+              <img
+                src="images/figma.png"
+                alt="figma"
+                title="Figma"
+                class="languages img-fluid"
+              />
+              <img
+                src="images/premiere-pro.png"
+                alt="premiere-pro"
+                title="Adobe Premiere Pro"
+                class="languages img-fluid"
+              />
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-8">
+          <div class="content">
+            <h2>My hobbies:</h2>
+            <div class="mt-4 about-me">
+              <div>🤸🏻‍♀️ Sport, yoga and stretching</div>
+              <div>🧘🏻‍♀️ Meditation</div>
+              <div>🎹 Playing piano</div>
+              <div>📚 Read books on psychology and self-development</div>
+              <div>🌎 Travelling and exploring new places</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -143,6 +259,7 @@
           >
         </div>
       </div>
+
       <div class="contact-me-icon d-flex justify-content-center mt-3">📩</div>
       <div
         class="email-contact d-flex justify-content-center mb-5"
