--- a/index.html
+++ b/index.html
@@ -99,23 +99,23 @@
       </h2>
       <div class="contact-about mt-5 text-uppercase">
         <a
-          href="contact-page.html#contact"
-          class="link-primary"
-          title="Contact Viktoriia Skakovska"
-          >Contact me</a
-        >
-        <a
           href="about-page.html"
-          class="link-primary"
+          class="link-primary btn"
           title="About Viktoriia Skakovska"
           >About me</a
+        >
+        <a
+          href="work-page.html"
+          class="link-primary btn"
+          title="See projects by Viktoriia Skakovska"
+          >My projects</a
         >
       </div>
     </div>
     <h4 class="text-center mt-4 mb-3">
       Check out some of my featured projects below
     </h4>
-    <div class="wrapper mb-3">
+    <div class="wrapper mb-5">
       <div class="arrow one">
         <img src="images/arrows.png" alt="" class="img-arrow" />
       </div>
@@ -133,29 +133,42 @@
           />
         </div>
         <div class="col-md-6">
-          <h3 class="mb-3">Yoga app</h3>
-          <p class="text-dark">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="app-link mt-5 mb-3">
-            <a href="#" class="link-secondary">Learn more</a>
+          <h3 class="mb-3">Yoga project</h3>
+          <div class="text-dark">
+            <div class="m-2">
+              ◾ this is my first project, you can learn more about yoga and
+              stretching here and sign up for a class
+            </div>
+            <div class="m-2">
+              ◾ used basic knowledge HTML, CSS ans JavaScript
+            </div>
+          </div>
+          <div class="mt-5 mb-3">
+            <a href="#" class="link-secondary btn">Learn more</a>
           </div>
         </div>
       </div>
       <div class="row p-4">
         <div class="col-md-6">
-          <h3 class="mb-3">Weather app</h3>
-          <p class="text-dark">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="app-link mt-5 mb-3">
-            <a href="#" class="link-secondary" target="_blank">Learn more</a>
+          <h3 class="mb-3">Weather project</h3>
+          <div class="text-dark">
+            <div class="m-2">
+              ◾ this Weather App can share real-time weather information
+            </div>
+            <div class="m-2">
+              ◾ you can find weather by searching for a city or using the pin
+              icon to use your current location
+            </div>
+            <div class="m-2">
+              ◾ used the following technologies like HTML, CSS, JavaScript,
+              API, Bootstrap, GitHub, Netlify
+            </div>
+            <div class="m-2">◾ check out the app and interact with it!</div>
+          </div>
+          <div class="mt-5 mb-3">
+            <a href="#" class="link-secondary btn" target="_blank"
+              >Learn more</a
+            >
           </div>
         </div>
         <div class="col-md-6 mb-3">
@@ -175,15 +188,23 @@
           />
         </div>
         <div class="col-md-6">
-          <h3 class="mb-3">Yougurt app</h3>
-          <p class="text-dark">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="app-link mt-5 mb-3">
-            <a href="#" class="link-secondary" target="_blank"> Learn more </a>
+          <h3 class="mb-3">Portfolio project</h3>
+          <div class="text-dark">
+            <div class="m-2">
+              ◾ this app was designed to be an example of a portfolio
+            </div>
+            <div class="m-2">
+              ◾ during this project, I've learned how to make websites
+              responsive
+            </div>
+            <div class="m-2">
+              ◾ used HTML, CSS, Bootstrap, GitHub, Flexbox, SEO, Responsive
+            </div>
+          </div>
+          <div class="mt-5 mb-3">
+            <a href="#" class="link-secondary btn" target="_blank">
+              Learn more
+            </a>
           </div>
         </div>
       </div>
@@ -196,7 +217,7 @@
         </div>
         <div>
           <a
-            href="contact-page.html"
+            href="contact-page.html#contact"
             class="btn btn-works"
             title="Contact Viktoriia Skakovska"
             >Let`s talk here</a
