--- a/contact-page.html
+++ b/contact-page.html
@@ -39,7 +39,7 @@
     />
   </head>
   <body class="page-contact">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html" title="Homepage"
           ><img src="images/logo3.png" class="img-fluid"
@@ -88,7 +88,7 @@
             <li class="nav-item">
               <a
                 class="nav-link active"
-                href="contact-page.html#contact"
+                href="contact-page.html"
                 title="Contact Viktoriia"
                 >Contact</a
               >
@@ -108,6 +108,7 @@
             class=""
             title="Contact Viktoriia Skakovska"
             target="_blank"
+            id="contact"
             >viktoriia.skakovska@gmail.com</a
           >
         </p>
