--- a/work-page.html
+++ b/work-page.html
@@ -39,7 +39,7 @@
     />
   </head>
   <body class="page-work">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html" title="Homepage"
           ><img src="images/logo3.png" class="img-fluid"
@@ -141,6 +141,20 @@
       </div>
     </div>
     <footer class="mb-5 mt-5">
+      <div class="contact-box container justify-content-between mb-5 d-md-flex">
+        <div>
+          <h4>Work Inquiry</h4>
+          <p>Let's work together!</p>
+        </div>
+        <div>
+          <a
+            href="contact-page.html#contact"
+            class="btn btn-works"
+            title="Contact Viktoriia Skakovska"
+            >Let`s talk here</a
+          >
+        </div>
+      </div>
       <div class="social-links d-flex justify-content-center text-center">
         <a
           href="https://www.linkedin.com/in/viktoriia-skakovska-3239b2241/"
