--- a/index.html
+++ b/index.html
@@ -144,7 +144,12 @@
             </div>
           </div>
           <div class="mt-5 mb-3">
-            <a href="#" class="link-secondary btn">Learn more</a>
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-basics-2ad76f6c-e6f8-48c6-9ce6-2bc892fc5e05/projects/922014"
+              class="link-secondary btn"
+              target="_blank"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
@@ -160,13 +165,16 @@
               icon to use your current location
             </div>
             <div class="m-2">
-              ◾ used the following technologies like HTML, CSS, JavaScript,
+              ◾ used the following technologies like React, CSS, JavaScript,
               API, Bootstrap, GitHub, Netlify
             </div>
             <div class="m-2">◾ check out the app and interact with it!</div>
           </div>
           <div class="mt-5 mb-3">
-            <a href="#" class="link-secondary btn" target="_blank"
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-react-10f872e9-249b-46f9-b4a0-1e527ac73cb6/projects/1366236"
+              class="link-secondary btn"
+              target="_blank"
               >Learn more</a
             >
           </div>
@@ -182,8 +190,8 @@
       <div class="row p-4">
         <div class="col-md-6">
           <img
-            src="images/yogurt.png"
-            alt="Yougurt project preview"
+            src="images/translation.png"
+            alt="Portfolio project preview"
             class="img-fluid rounded d-none d-sm-block"
           />
         </div>
@@ -202,7 +210,11 @@
             </div>
           </div>
           <div class="mt-5 mb-3">
-            <a href="#" class="link-secondary btn" target="_blank">
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-react-10f872e9-249b-46f9-b4a0-1e527ac73cb6/projects/1366236"
+              class="link-secondary btn"
+              target="_blank"
+            >
               Learn more
             </a>
           </div>
