--- a/work-page.html
+++ b/work-page.html
@@ -103,11 +103,11 @@
         <div class="row text-center">
           <div class="col-6">
             <img
-              src="images/yogurt.png"
+              src="images/yoga.png"
               class="img-fluid mb-4 rounded"
               alt="My yougurt project"
             />
-            <h3 class="work-page">Yougurt project</h3>
+            <h3 class="work-page">Yoga project</h3>
             <p>Built with HTML and CSS</p>
           </div>
           <div class="col-6">
@@ -119,6 +119,7 @@
             <h3 class="work-page">Weather project</h3>
             <p>Built with HTML, CSS and JavaScript</p>
           </div>
+          <!--
           <div class="col-6">
             <img
               src="images/dictionary.png"
@@ -137,6 +138,7 @@
             <h3 class="work-page">Translation App</h3>
             <p>Built with HTML, CSS with React</p>
           </div>
+          -->
         </div>
       </div>
     </div>
