--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           </div>
           <div class="mt-5 mb-3">
             <a
-              href="https://www.shecodes.io/workshops/shecodes-basics-2ad76f6c-e6f8-48c6-9ce6-2bc892fc5e05/projects/922014"
+              href="https://www.shecodes.io/cohorts/734/projects/922014?_gl=1*1rtkpin*_gcl_au*MTg0MzI1NTU5OC4xNzI5MTg0ODc2"
               class="link-secondary btn"
               target="_blank"
               >Learn more</a
@@ -172,7 +172,7 @@
           </div>
           <div class="mt-5 mb-3">
             <a
-              href="https://www.shecodes.io/workshops/shecodes-react-10f872e9-249b-46f9-b4a0-1e527ac73cb6/projects/1366236"
+              href="https://bespoke-conkies-b92d2f.netlify.app/"
               class="link-secondary btn"
               target="_blank"
               >Learn more</a
