--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Portfolio of Viktoriia SKakovska - font-end developer from Ukraine, based
+      Portfolio of Viktoria SKakovska - font-end developer from Ukraine, based
       in Europe
     </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
