--- a/contact-page.html
+++ b/contact-page.html
@@ -166,7 +166,7 @@
           ><img src="images/email1.png" alt="Email Viktoria" class="footer-img"
         /></a>
         <a
-          href="https://www.instagram.com/viktoriaflex/"
+          href=""
           class=""
           target="_blank"
           ><img
