--- a/contact-page.html
+++ b/contact-page.html
@@ -122,8 +122,8 @@
         </p>
         <h3 class="work-page">Instagram</h3>
         <p class="contact-page">
-          <a href="https://www.instagram.com/viktoriaflex/" target="_blank"
-            >ViktoriaFlex</a
+          <a href="" target="_blank"
+            >instagram</a
           >
         </p>
         <h3 class="work-page">GitHub</h3>
